opentofu/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
